--- a/index.html
+++ b/index.html
@@ -1,53 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simulation Project</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+  <head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>Simulation Project</title>
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+      <link rel="stylesheet" href="style.css">
+  </head>
 
-    <div class="container">
+  <body>
+      <div class="container">
+          <div class="box">
+            <h2 class="pb-4">Floating point rounding (binary)</h2>
+            <div class="flex">
+              <form>
+                <div class="form-group">
+                  <label for="inputBinary">Binary</label>
+                  <input type="text" class="form-control" id="inputBinary" required>
+                </div>
+                <div class="form-group">
+                  <label for="inputBits">Number of Bits</label>
+                  <input type="number" class="form-control" id="inputBits" min="1" required>
+                </div>
+                <button type="button" class="btn btn-primary" onclick="calculate()">Calculate</button>
+              </form>
 
-        <div class="box">
-
-          <h2>Floating point rounding (binary)</h2>
-          <br><br>
-
-          <div class="flex">
-            <form>
-              <div class="form-group">
-                <label for="inputBinary">Binary</label>
-                <input type="text" class="form-control" id="binary" required>
+              <div class="answers">
+                <label for="truncate">Rouding Using Truncate</label>
+                <div class="alert alert-light" role="alert" id="truncate">0</div>
+                <label for="output">Round Up</label>
+                <div class="alert alert-light" role="alert" id="roundUp">0</div>
+                <label for="output">Round Down</label>
+                <div class="alert alert-light" role="alert" id="roundDown">0</div>
+                <label for="output">Round-To-Nearest Ties To Even</label>
+                <div class="alert alert-light" role="alert" id="ties">0</div>
+                <label for="error" id="errorMsg"></label>
               </div>
-              <div class="form-group">
-                <label for="inputBits">Number of Bits</label>
-                <input type="number" class="form-control" id="bits" min="1" required>
-              </div>
-              <button type="button" class="btn btn-primary" onclick="calculate()">Calculate</button>
-            </form>
-
-            <div class="answers">
-              <label for="output">Rouding Using Truncate</label>
-            <div class="alert alert-light" role="alert" id="truncate">0</div>
-            <label for="output">Round Up</label>
-            <div class="alert alert-light" role="alert" id="roundUp">0</div>
-            <label for="output">Round Down</label>
-            <div class="alert alert-light" role="alert" id="roundDown">0</div>
-            <label for="output">Round-To-Nearest Ties To Even</label>
-            <div class="alert alert-light" role="alert" id="ties">0</div>
-            <label for="error" id="errorMsg"></label>
             </div>
           </div>
-
-        </div>
-
-        <p>Aryan Arora, Jolson Cruz, Joeme Santos (CSARCH2 Group 5)</p>
-
-    </div>
-    
-<script src="script.js"></script>
-</body>
+          <p>Aryan Arora, Jolson Cruz, Joeme Santos (CSARCH2 Group 5)</p>
+      </div>  
+    <script src="script.js"></script>
+  </body>
 </html>
