--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <body>
       <div class="container">
-          <div class="box">
+          <div class="box shadow shadow-lg">
             <h2 class="pb-4">Floating point rounding (binary)</h2>
             <div class="flex">
               <form>
