--- a/index.html
+++ b/index.html
@@ -22,6 +22,23 @@
                   <label for="inputBits">Number of Bits</label>
                   <input type="number" class="form-control" id="inputBits" min="1" required>
                 </div>
+                <div class="form-group">
+                  <label for="inputSignBox">Binary Sign</label>
+                  <div class="form-group rounded" id="inputSignBox" name="inputSignBox">
+                    <div class="form-check ml-2">
+                      <input class="form-check-input" type="radio" name="inputSign" id="inputPositive" value="positive">
+                      <label class="form-check-label" for="inputPositive">
+                        Positive (+)
+                      </label>
+                    </div>
+                    <div class="form-check ml-2">
+                      <input class="form-check-input" type="radio" name="inputSign" id="inputNegative" value="negative">
+                      <label class="form-check-label" for="inputNegative">
+                        Negative (-)
+                      </label>
+                    </div>
+                  </div>
+                </div>
                 <button type="button" class="btn btn-primary" id="calculate" name="calculate">Calculate</button>
               </form>
 
