Rename bits to significant bits

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                   <input type="text" class="form-control" id="inputBinary" name="inputBinary" required>
                 </div>
                 <div class="form-group">
-                  <label for="inputBits">Number of Bits</label>
+                  <label for="inputBits">Number of Significant Bits</label>
                   <input type="number" class="form-control" id="inputBits" min="1" required>
                 </div>
                 <div class="form-group">
