--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
               </form>
 
               <div class="answers">
+                <!-- for debug only -->
+                <label for="debug">SigNum (debug only)</label>
+                <div class="alert alert-light" role="alert" id="debug">0</div>
+                <!-- for debug only -->
                 <label for="truncate">Rouding Using Truncate</label>
                 <div class="alert alert-light" role="alert" id="truncate">0</div>
                 <label for="output">Round Up</label>
