fixed roundUp + roundDown

--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
                 <label for="truncate">Rouding Using Truncate</label>
                 <div class="alert alert-light" role="alert" id="truncate">0</div>
                 <label for="roundUp">Round Up</label>
-                <div class="alert alert-light" role="alert" id="roundUp">0</div>
+                <div class="alert alert-light" role="alert"><span id="roundUp">0</span><br><span id="carryUp" class="text-danger"></span></div>
                 <label for="roundDown">Round Down</label>
-                <div class="alert alert-light" role="alert" id="roundDown">0</div>
+                <div class="alert alert-light" role="alert"><span id="roundDown">0</span><br><span id="carryDown" class="text-danger"></span></div>
                 <label for="ties">Round-To-Nearest Ties To Even</label>
                 <div class="alert alert-light" role="alert" id="ties">0</div>
                 <label for="error" id="errorMsg"></label>
