--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <label for="roundDown">Round Down</label>
                 <div class="alert alert-light" role="alert"><span id="roundDown">0</span><br><span id="carryDown" class="text-danger"></span></div>
                 <label for="ties">Round-To-Nearest Ties To Even</label>
-                <div class="alert alert-light" role="alert" id="ties">0</div>
+                <div class="alert alert-light" role="alert"><span id="ties">0</span><br><span id="carryTies" class="text-danger"></span></div>
                 <label for="error" id="errorMsg"></label>
               </div>
             </div>
