--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
   <body>
       <div class="container">
-          <div class="box shadow shadow-lg">
-            <h2 class="pb-4">Floating point rounding (binary)</h2>
+          <div class="box">
+            <h2 class="pb-4">Floating Point Rounding (Binary)</h2>
             <div class="flex">
               <form>
                 <div class="form-group">
